--- a/cucumber_framework/Makefile
+++ b/cucumber_framework/Makefile
@@ -3,10 +3,10 @@ setup:
 	rvm install ruby -v '2.5.5'
 	rvm use 2.5.5
 	gem install bundler
-	# gem install selenium-webdriver
-	# gem install cucumber
-	# gem install byebug
-	# gem install rspec-expectations
-	# gem install httparty
-	# gem install faker
+	gem install selenium-webdriver
+	gem install cucumber
+	gem install byebug
+	gem install rspec-expectations
+	gem install httparty
+	gem install faker
 	bundle install
