set chrome path

--- a/cucumber_framework/Makefile
+++ b/cucumber_framework/Makefile
@@ -1,6 +1,6 @@
 setup:
 	\curl -sSL https://get.rvm.io | bash -s stable --ruby
-	rvm install ruby -v '2.5.5'
+	rvm install 2.5.5
 	rvm use 2.5.5
 	gem install bundler
 	gem install selenium-webdriver
@@ -10,3 +10,4 @@ setup:
 	gem install httparty
 	gem install faker
 	bundle install
+	bundle update
