changes in make file

--- a/cucumber_framework/Makefile
+++ b/cucumber_framework/Makefile
@@ -1,13 +1,29 @@
-setup:
-	\curl -sSL https://get.rvm.io | bash -s stable --ruby
-	rvm install 2.5.5
-	rvm use 2.5.5
-	gem install bundler
-	gem install selenium-webdriver
-	gem install cucumber
-	gem install byebug
-	gem install rspec-expectations
-	gem install httparty
-	gem install faker
-	bundle install
-	bundle update
+set-rvm:
+    \curl -sSL https://get.rvm.io | bash -s stable --ruby
+
+    rvm reload
+
+install-ruby:
+    rvm install 2.5.5
+
+set-ruby:
+    rvm use 2.5.5
+		
+set-gems:
+    gem install selenium-webdriver
+
+    gem install cucumber
+
+    gem install byebug
+
+    gem install rspec-expectations
+
+    gem install httparty
+
+    gem install faker
+		
+		gem install bundler
+
+    bundle install
+
+		bundle update
